--- a/Lecture 1 - Hydrological Timeseries of Erlenbach.ipynb
+++ b/Lecture 1 - Hydrological Timeseries of Erlenbach.ipynb
@@ -119,11 +119,11 @@
     "## If you are curious: You can open the excel file by manually (in excel) to see what this datafile looks like\n",
     "\n",
     "# Specify where the data is stored\n",
-    "file_path =  'runoff_daily-mean_alptal_1968-2022_envidat_updated.xlsx'\n",
+    "file_path =  'ErlenbachQ.xls'\n",
     "\n",
     "# Create dataframe with streamflow data from Alpthal catchment \n",
     "# A dataframe is a 2D data structure, like a table with rows and columns.\n",
-    "dfQ = pd.read_excel(file_path, sheet_name='Erlenbach', skiprows=7)\n",
+    "dfQ = pd.read_excel(file_path, skiprows=7)\n",
     "\n",
     "# We here give each column within the dataframe a name that reflect what data they store\n",
     "column_name_mapping = {\n",
@@ -185,8 +185,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/m6/29dmlndn6fq4qjsjj9238fy00000gn/T/ipykernel_11819/1293207184.py:11: FutureWarning: DataFrame.set_axis 'inplace' keyword is deprecated and will be removed in a future version. Use `obj = obj.set_axis(..., copy=False)` instead\n",
-      "  dfP.set_axis(new_column_names, axis=1, inplace=True)\n"
+      "/var/folders/m6/29dmlndn6fq4qjsjj9238fy00000gn/T/ipykernel_30519/3143833897.py:11: FutureWarning: DataFrame.set_axis 'inplace' keyword is deprecated and will be removed in a future version. Use `obj = obj.set_axis(..., copy=False)` instead\n",
+      "  dfP.set_axis(new_column_names, axis=1, inplace=True) # ,\n"
      ]
     }
    ],
@@ -195,13 +195,13 @@
     "# We use a similar procedure as before \n",
     "\n",
     "# Specify path and create dataframe\n",
-    "file_path_1 ='meteorological-data_alptal_1968-2022_envidat_updated.xlsx'\n",
+    "file_path_1 ='meteorological-data_alptal_1968-2022_envidat_updated.xls'\n",
     "dfP = pd.read_excel(file_path_1,  skiprows=17)\n",
     "\n",
     "# Rename the dataframe columns. We will not use all variables (at this stage)\n",
     "new_column_names = ['Date', 'AirTemp(Erlenhohe)', 'RelativeHumidity(Erlenhohe)', 'Windspeed(Erlenhohe)',  'Precip(Erlenhohe)',  'GlobalRadiation(Erlenhohe)',  'DewpointTemp(Erlenhohe)',  'Precipitation(Vogelbach)', 'Precipitation(Lumpenbach)', 'SnowDepth(Erlenhohe)', 'ModeledSnowDepth(Erlenhohe)',   'SWE1(Erlenhohe)', 'SWE2(Erlenhohe)',   'Temperature(Einsiedeln)','Precip(Einsiedeln)']  # Add all the new column names in the order you want\n",
     "if len(new_column_names) == len(dfP.columns):\n",
-    "    dfP.set_axis(new_column_names, axis=1, inplace=True)"
+    "    dfP.set_axis(new_column_names, axis=1, inplace=True) # , "
    ]
   },
   {
