--- a/Lecture 1 - Hydrological Timeseries of Erlenbach.ipynb
+++ b/Lecture 1 - Hydrological Timeseries of Erlenbach.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "4a344af8",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "104217d7",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "5e0c5fcd",
    "metadata": {},
    "outputs": [
@@ -177,36 +177,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "id": "662b5e00",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/m6/29dmlndn6fq4qjsjj9238fy00000gn/T/ipykernel_30519/3143833897.py:11: FutureWarning: DataFrame.set_axis 'inplace' keyword is deprecated and will be removed in a future version. Use `obj = obj.set_axis(..., copy=False)` instead\n",
-      "  dfP.set_axis(new_column_names, axis=1, inplace=True) # ,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# First we will also load the meteorological timeseries from an xlsx-file.\n",
     "# We use a similar procedure as before \n",
     "\n",
     "# Specify path and create dataframe\n",
-    "file_path_1 ='meteorological-data_alptal_1968-2022_envidat_updated.xls'\n",
-    "dfP = pd.read_excel(file_path_1,  skiprows=17)\n",
+    "file_path_1 ='meteorological-data_alptal_1968-2022_envidat_updated_1.xls'\n",
+    "dfP = pd.read_excel(file_path_1,  skiprows=0)\n",
     "\n",
     "# Rename the dataframe columns. We will not use all variables (at this stage)\n",
-    "new_column_names = ['Date', 'AirTemp(Erlenhohe)', 'RelativeHumidity(Erlenhohe)', 'Windspeed(Erlenhohe)',  'Precip(Erlenhohe)',  'GlobalRadiation(Erlenhohe)',  'DewpointTemp(Erlenhohe)',  'Precipitation(Vogelbach)', 'Precipitation(Lumpenbach)', 'SnowDepth(Erlenhohe)', 'ModeledSnowDepth(Erlenhohe)',   'SWE1(Erlenhohe)', 'SWE2(Erlenhohe)',   'Temperature(Einsiedeln)','Precip(Einsiedeln)']  # Add all the new column names in the order you want\n",
-    "if len(new_column_names) == len(dfP.columns):\n",
-    "    dfP.set_axis(new_column_names, axis=1, inplace=True) # , "
+    "new_column_names = [ 'Date', \n",
+    "                    'AirTemp(Erlenhohe)', \n",
+    "                    'RelativeHumidity(Erlenhohe)', \n",
+    "                    'Windspeed(Erlenhohe)',  \n",
+    "                    'Precip(Erlenhohe)',  \n",
+    "                    'GlobalRadiation(Erlenhohe)',  \n",
+    "                    'DewpointTemp(Erlenhohe)',  \n",
+    "                    'Precipitation(Vogelbach)', \n",
+    "                    'Precipitation(Lumpenbach)', \n",
+    "                    'SnowDepth(Erlenhohe)', \n",
+    "                    'ModeledSnowDepth(Erlenhohe)',   \n",
+    "                    'SWE1(Erlenhohe)', \n",
+    "                    'SWE2(Erlenhohe)',   \n",
+    "                    'Temperature(Einsiedeln)',\n",
+    "                    'Precip(Einsiedeln)'\n",
+    "                    ]  # Add all the new column names in the order you want\n",
+    "#if len(new_column_names) == len(dfP.columns):\n",
+    "#    dfP.set_axis(new_column_names, axis=1) # , \n",
+    "dfP.columns = new_column_names\n",
+    "   \n",
+    "#dfP.rename(columns=new_column_names, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "id": "32269a01",
    "metadata": {},
    "outputs": [],
@@ -227,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "id": "a7db81a2",
    "metadata": {
     "scrolled": true
@@ -239,7 +248,7 @@
        "(11961.0, 14152.0)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -303,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "id": "9221bf9b",
    "metadata": {},
    "outputs": [
@@ -338,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "id": "175589b9",
    "metadata": {
     "scrolled": true
@@ -389,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "id": "abcc36b3",
    "metadata": {},
    "outputs": [
@@ -450,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "id": "15acd1b9",
    "metadata": {},
    "outputs": [
@@ -507,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "id": "ead53dc4",
    "metadata": {},
    "outputs": [
